[package]
name = "belajar-rust-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = "0.12.6"
axum-test = "20.1.0"
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.4"
tower-cookies = "0.11"
tower-http = { version = "0.7", features = ["trace"] }
uuid = { version = "1.23.3", features = ["v4"] }
